[20] Having a record pattern in enhanced for produces multiple 'preview feature' errors #882